# c_Https_Server

./: .gitignore  BINARY_ORGANIZATION.md  CMakeLists.txt  FINAL_SUMMARY.md  Makefile  PROXY_IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md  README.md  main.c  main.cpp  test_proxy.sh
Docs/: ARRAY_LIKE_SUMMARY.md  DATA_TYPES_REFERENCE.md  PROXY_DOCUMENTATION.md  QUICK_PROXY_GUIDE.md
examples/: Makefile  Makefile_all  Makefile_array  Makefile_proxy  README.md  all_types_example.c  array_like_example.c  array_like_usage.h  comparison_example.c  final_test.c  forward_proxy.c  generic_list_example  generic_list_example.c  multi_mode_server.c  reverse_proxy.c
include/: example.h  hdlibc.hpp  linkedList.h  simpleSocket.hpp
include/Networking/: proxy.h  server.h
src/: example.c  hdlibc.cpp  simpleSocket.cpp
src/Networking/: proxy.c  server.c
src/linkedList/: createNode.c  deleteAtIndex.c  deleteNode.c  displayList.c  freeList.c  getDataAtIndex.c  getListSize.c  getNodeAtIndex.c  helpers.c  insertAtHead.c  insertAtIndex.c  insertAtTail.c  setDataAtIndex.c
